# doordash-geo-hunt

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
.cursor/agents/: contest-day-prompt.txt
.cursor/automation/: door-dash-drop.json
notebooks/: colab_geo_hunt.ipynb
samples/boston-drop/: manifest.json  tweet.json
samples/live-drop/: manifest.json  tweet.json
samples/miami-drop1/: manifest.json  tweet.json  tweet1.json  tweet2.json
samples/miami-drop2/: manifest.json
samples/nj-drop/: manifest.json  tweet.json
samples/run1/: .gitkeep
scripts/: probe_bedrock_models.py  probe_models.py  setup_gpu_instance.sh  test_apis.py  trigger-drop-webhook.ps1
src/doordash_geo_hunt/: __init__.py  cli.py  geo.py  kartaview.py  llm_vision.py  map_extractor.py  mapillary.py  models.py  orchestrator.py  pipeline_context.py  preprocessing.py  streetview.py  twitter_fetcher.py
src/doordash_geo_hunt/agents/: visual_matcher.py  vlm_agents.py  vlm_verifier.py
src/doordash_geo_hunt/judge/: judge_agent.py
src/doordash_geo_hunt/matching/: clip_matcher.py  feature_matcher.py  template_matcher.py
tests/: test_pipeline.py
