[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doordash-geo-hunt"
version = "0.1.0"
description = "Multi-agent geolocation solver for DoorDash FIFA ticket drops"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pillow>=10.0",
  "opencv-python-headless>=4.9",
  "python-dotenv>=1.0",
  "pydantic>=2.6",
  "httpx>=0.27",
  "rich>=13.7",
  "torch>=2.2",
  "open-clip-torch>=2.24",
  "scikit-image>=0.22",
  "easyocr>=1.7",
]

[project.optional-dependencies]
cursor = ["cursor-sdk>=0.1.0"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
doordash-geo-hunt = "doordash_geo_hunt.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
